# dataminded_lol_python_packaging

./: .gitignore  README.md  playground.py  requirements.txt  setup.cfg  setup.py
src/: greetings.py
