[metadata]
name = salutations-maker
version = 0.0.4
author = Nathan Derave
author-email = nathan.derave@dataminde.be
description = A package to say hello
long-description-content-type = text/markdown

[options]
python_requires = >= 3.6
packages=
    slmaker
package_dir=
 =src

[options.extras_require]
dev =
    pytest
    flake8
    tox
    twine